Fix darkened pixels when rendering using GPU

This CL fixes the issue reported in bugs 713632 and 713702, where the
pixels are darker than usual when rendered with GPU on some specific
devices.

BUG=713632
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2838153003
Cr-Commit-Position: refs/heads/master@{#467372}

Former-commit-id: 678a0bea8eb9989953ca780f6afcb382ae047aee